# bevy_snake

./: Cargo.toml  README.md
src/: collision.rs  main.rs  res.rs  setup.rs  snake.rs  spawn.rs  wall.rs
src/comp/: actor.rs  mod.rs  physics.rs  stats.rs  ui.rs
src/sys/: actor.rs  mod.rs  physics.rs  player.rs  stats.rs  ui.rs  util.rs
