[package]
name = "per_spatium"
version = "0.1.0"
authors = ["BottledByte <6443024-BottledByte@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.7.3"